# reynard

./: .actionlintrc.yml  .cursorignore  .env.production.test  .eslint.cjs  .eslintrc.cjs  .flake8  .foxy.json  .gitignore  .gitmodules  .lintstagedrc.js  .prettierignore  .prettierrc  .reynard-linting.json  .shellcheckrc  ARCHITECTURAL_ANALYSIS_REPORT.md  ARCHITECTURAL_ANALYSIS_SUMMARY.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_SCANNER_USAGE.md  COLOR_MEDIA_REORGANIZATION_SUMMARY.md  CONSOLIDATION_MIGRATION_GUIDE.md  CONTRIBUTING.md  DEPENDENCY_ANALYSIS_SUMMARY.md  DOCUMENTATION_TESTING.md  Dockerfile.frontend  Dockerfile.frontend.production  FINAL_OPTIMIZATION_SUMMARY.md  MCP_ARCHITECTURE_ANALYSIS.md  MCP_TOOLS_STATUS.md  MIGRATION.md  MODULAR_PACKAGE_BUILD_STATUS.md  MODULAR_PACKAGE_FIXES_SUMMARY.md  MODULAR_PACKAGE_VERIFICATION_REPORT.md  Makefile.dev  OPTIMIZATION_COMPLETE.md  PEER_DEPENDENCY_OPTIMIZATION.md  PHASE2_PROGRESS.md  PHASE3_PROGRESS.md  PYTHON_DEV_SETUP.md  RAG_EMBEDDINGS_ANALYSIS.md  (+76 more)
backend/: .env.example  ANALYSIS_TOOLS_README.md  CACHE_PROOF_GUIDE.md  CACHE_PROOF_SUMMARY.md  CONTINUOUS_INDEXING_SETUP.md  DATABASE_SETUP.md  Dockerfile  Dockerfile.cpu.production  Dockerfile.production  EMBEDDING_BACKEND_CONFIG.md  FASTAPI_CONTINUOUS_INDEXING_STATUS.md  INTELLIGENT_RELOAD.md  MIGRATION_RESTRUCTURE_SUMMARY.md  OLLAMA_BACKEND_README.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  README_REDIS_SECURITY.md  REDIS_CACHING_PLAN.md  SECRETS_MANAGEMENT.md  SECURITY_IMPLEMENTATION_GUIDE.md  SECURITY_REPORT.md  STARTUP_MEMORY_ANALYSIS.md  SUMMARIZATION_BACKEND_README.md  TESTING_SECURITY_FIXES.md  TESTING_SUMMARY.md  TEST_RESULTS_SUMMARY.md  add_memory_profiling.py  alembic.ini  alembic_auth.ini  alembic_e2e.ini  alembic_ecs.ini  alembic_ecs_e2e.ini  alembic_main.ini  alembic_mcp.ini  all_races_alembic_data.py  cache_metrics_logger.py  cache_monitoring_dashboard.py  cache_proof_demonstration.py  check_coverage.py  check_messages.py  (+57 more)
backend/alembic/: README.md  env.py
backend/alembic_e2e/: env.py
backend/alembic_ecs_e2e/: env.py
backend/alembic_main/: env.py
backend/app/: gatekeeper_config.py
backend/backend/: .jwt_secret
backend/benchmarks/: benchmark_report_20250921_001620.txt  benchmark_report_20250921_080158.txt  benchmark_report_20250921_084535.txt  benchmark_report_20250921_084543.txt  benchmark_report_20250921_084652.txt  benchmark_report_20250921_085657.txt  load_test.py  performance_benchmark.py
backend/database/: schema.sql
backend/docs/: ecs-memory-interaction-api.md  ecs-memory-interaction-tutorial.md  ecs-performance-optimization.md  ecs-production-deployment.md  migration_guide.md  postgresql-database-naming-convention.md  quality-gates-centralized-system.md  refactoring_guide.md
backend/examples/: .env.custom-ollama  .env.disable-ollama  .env.disable-sentence-transformers  .env.mock-mode  .env.production-fallback  embedding-backend-env-examples.txt  embedding_backend_config_demo.py  ollama_tool_calling_example.py  test_env_backend_config.py  test_env_integration.py
backend/pytest_plugins/: db_reporter.py
backend/scripts/: bootstrap_rbac_system.py  categorize_and_index_papers.py  continuous_indexing.py  create_admin_user.py  create_kade_admin.py  create_kade_simple.py  create_kade_standalone.py  debug_preindex.py  deploy_secure_redis.sh  dev-server.py  enhanced_migration_runner.py  index_codebase.py  index_reynard_codebase.py  init_auth_database.py  install_postgres_extensions.sh  migrate.py  migrate_tool_config_to_postgresql.py  minimal_test.py  populate_default_tools.py  preindex_codebase.py  production_hardening.py  redis-secure.service.example  run-tests.sh  run_categorization_tests.py  run_migrations.py  run_tests.py  setup_admin_user.py  setup_all_databases.py  setup_quality_gates.py  setup_redis_tls.sh  simple_migration_runner.py  test-intelligent-reload.py  test-nlweb.sh  test_auth_integration.py  test_continuous_indexing.py  test_continuous_indexing_enabled.py  test_enhanced_database.py  test_fastapi_rag_integration.py  test_paper_categorization.py  update_rag_config.py
backend/tests/: README.md  README_RAG_TESTS.md  __init__.py  conftest.py  run_rag_tests.py  test_advanced_query_expansion.py  test_api_endpoints.py  test_custom_reload_handler.py  test_database_integrations.py  test_document_categorization.py  test_embedding_backend_config.py  test_failing_example.py  test_gallery_api.py  test_gallery_service.py  test_intelligent_reload.py  test_itsdangerous_integration.py  test_main_integration.py  test_mcp_tools.py  test_memory_efficiency.py  test_memory_efficient_integration.py  test_project_root.py  test_quality_gates_api.py  test_quality_gates_service.py  test_rag_optimizations.py  test_rag_phase2.py  test_refactored_components.py  test_reload_performance.py  test_reload_watcher.py  test_scraping_arstechnica.py  test_scraping_integration.py  test_scraping_intelligent_filter.py  test_scraping_models.py  test_scraping_multi_tier.py  test_scraping_service.py  test_scraping_wordpress.py  test_semantic_search.py  test_service_lifecycle.py  test_simple_intelligent_reload.py  test_simple_memory_efficiency.py  (+2 more)
scripts/: .pylintrc  README.md  README_agent_diagram.md  __init__.py  analyze-deps.sh  basic-changelog-scanner.py  changelog-scan-results.json  changelog-scanner.py  changelog-watcher.sh  cleanup-vitest-configs-fast.sh  cleanup-vitest-configs.sh  convert-to-workspace.sh  debug-scanner.py  demo-doc-tests.js  deploy-cpu-production.sh  deploy-production.sh  detect-circular.sh  detect-tracked-junk-files.sh  dev-server-manager.sh  dev-setup.sh  doc-tests.js  download_union_find_batch.py  download_union_find_papers.py  download_union_find_standalone.py  efficient-changelog-scanner.py  fix-package-builds.sh  generate-project-diagrams.sh  generate_agent_diagram.py  generate_race_files.py  i18n-ci-lenient.sh  i18n-ci.sh  i18n-test-all.sh  install-git-hooks.ts  optimize-peer-deps.sh  pre-commit-hook  pyproject.toml  python-workflow-automation.sh  select-research-component.py  setup-dev-nginx.sh  setup-dev.sh  (+27 more)
scripts/dev/: README.md  (+16 more)
(+4784 files in other folders)
