[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reynard-backend"
version = "0.1.0"
description = "Reynard Backend - FastAPI-based backend services"
authors = [{ name = "Balazs Horvath", email = "acsipont@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-jose[cryptography]",
    "python-dotenv",
    "python-multipart",
    "email-validator",
    "pydantic[email]",
    "slowapi",
    "limits",
    "torch",
    "torchvision",
    "pillow",
    "pillow-jxl-plugin",
    "pillow-avif-plugin",
    "numpy",
    "asyncio",
    "sqlalchemy",
    "psycopg2-binary",
    "aiohttp",
    "pgvector",
    "argon2-cffi",
    "cryptography",
    "gatekeeper @ file://../libraries/gatekeeper",
    "reynard-ecs-world @ file://../packages/ecs-world",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "pytest-mock",
    "pytest-xdist",
    "factory-boy",
    "faker",
    "freezegun",
    "responses",
]

dev = [
    "reynard-backend[test]",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/rakki194/reynard"
Documentation = "https://(TBD)"
Repository = "https://github.com/rakki194/reynard.git"
Issues = "https://github.com/rakki194/reynard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/test_*", "*/__pycache__/*", "*/venv/*", "*/env/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Backend package configuration
# Tooling configuration is inherited from the monorepo root pyproject.toml
# This file only contains backend-specific project metadata and dependencies

# Note: All tooling configuration (black, isort, mypy, ruff, pytest, etc.)
# is defined in the monorepo root pyproject.toml for consistency across packages
