[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-naming"
version = "0.1.0"
description = "Agent naming system with animal spirit themes and sci-fi conventions for the Reynard ecosystem"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Reynard Team", email = "team@reynard.dev"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Games/Entertainment :: Role-Playing",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "ruff",
    "pre-commit",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
]

[project.urls]
Homepage = "https://github.com/reynard-dev/agent-naming"
Documentation = "https://agent-naming.readthedocs.io"
Repository = "https://github.com/reynard-dev/agent-naming.git"
"Bug Tracker" = "https://github.com/reynard-dev/agent-naming/issues"

[tool.hatch.build.targets.wheel]
packages = ["agent_naming"]

# Agent Naming package configuration
# Tooling configuration is inherited from the monorepo root pyproject.toml
# This file only contains agent-naming-specific project metadata and dependencies

# Note: All tooling configuration (black, isort, mypy, ruff, pytest, etc.)
# is defined in the monorepo root pyproject.toml for consistency across packages
