[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reynard-codebase-scanner"
version = "1.0.0"
description = "Comprehensive codebase analysis and scanning service for the Reynard ecosystem"
authors = [{ name = "Reynard Team" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "watchdog>=3.0.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-json>=0.20.0",
    "tree-sitter-yaml>=0.20.0",
    "tree-sitter-markdown>=0.20.0",
    "radon>=6.0.0",
    "lizard>=1.17.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "semgrep>=1.45.0",
    "networkx>=3.2.0",
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0.0",
    "toml>=0.10.0",
    "gitpython>=3.1.0",
    "rich>=13.7.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "ruff",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-docstrings",
    "flake8-import-order",
    "flake8-print",
    "flake8-simplify",
    "flake8-unused-arguments",
    "flake8-use-pathlib",
    "eradicate",
    "pandas-vet",
    "pygrep-hooks",
    "tryceratops",
    "flynt",
    "perflint",
    "refurb",
    "bandit",
    "safety",
    "pre-commit",
    "types-requests",
    "types-setuptools",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "httpx",
]

[tool.mypy]
cache_dir = "/tmp/mypy_cache"
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
mypy_path = "stubs"

# Module-specific configurations
[[tool.mypy.overrides]]
module = [
    "tree_sitter",
    "tree_sitter_python",
    "tree_sitter_typescript",
    "tree_sitter_javascript",
    "tree_sitter_json",
    "tree_sitter_yaml",
    "tree_sitter_markdown",
    "radon",
    "lizard",
    "bandit",
    "safety",
    "semgrep",
    "networkx",
    "matplotlib",
    "plotly",
    "pandas",
    "numpy",
    "git",
    "rich",
    "click",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "T20", # flake8-print
]
ignore = []

[tool.ruff.per-file-ignores]
"test_*.py" = ["T201"] # Allow print statements in test files
