[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reynard-ecs-world"
version = "0.1.0"
description = "ECS World simulation system for agent management and breeding in the Reynard ecosystem"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Reynard Team", email = "team@reynard.dev"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Games/Entertainment :: Role-Playing",
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "asyncio",
    "pathlib",
    "typing-extensions",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "ruff",
    "pre-commit",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
]

[project.urls]
Homepage = "https://github.com/reynard-dev/ecs-world"
Documentation = "https://ecs-world.readthedocs.io"
Repository = "https://github.com/reynard-dev/ecs-world.git"
"Bug Tracker" = "https://github.com/reynard-dev/ecs-world/issues"

[tool.hatch.build.targets.wheel]
packages = ["reynard_ecs_world"]



